third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/copy_field_invalid.old.exp

Diagnostics:
error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_field_invalid.move:13:9
   │
12 │         let f = &mut s.f;
   │                 --------
   │                 │    │
   │                 │    previous mutable local borrow
   │                 used by mutable field borrow
13 │         copy s;
   │         ^^^^^^ copied here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_field_invalid.move:19:9
   │
18 │         let f = id_mut(&mut s.f);
   │                        --------
   │                        │    │
   │                        │    previous mutable local borrow
   │                        used by mutable field borrow
19 │         copy s;
   │         ^^^^^^ copied here
20 │         *f;
   │         -- conflicting reference `f` used here
